# Game-playingCompanionStoreManagementSystem

./: CMakeLists.txt  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  ForgotPasswordDlg.cpp  ForgotPasswordDlg.h  ForgotPasswordDlg.ui  Logger.cpp  Logger.h  LoginDlg.cpp  LoginDlg.h  LoginDlg.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OrderManager.cpp  OrderManager.h  OrderSettlement.cpp  OrderSettlement.h  README.md  RechargeReviewDlg.cpp  RechargeReviewDlg.h  RechargeReviewDlg.ui  RegisterDlg.cpp  RegisterDlg.h  RegisterDlg.ui  SecurityUtils.cpp  SecurityUtils.h  ValidatorUtils.cpp  ValidatorUtils.h  main.cpp  数据库设计.md
